--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "nodemon server.js"
   },
+  "engines": {"node": ">=14.20.1"},
   "author": "",
   "license": "ISC",
   "dependencies": {
